[package]
name = "pump69-program"
version = "0.1.0"
edition = "2021"
description = "Pump69 Solana Anchor program for league management"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump69_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["default"] }
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
switchboard-v2 = "0.4.0"
mpl-token-metadata = "1.13.1"
borsh = "0.10.3"
